# Quote-Manager-CLI-Precious

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  category.json  pyproject.toml
.github/workflows/: pre-merge.yml
quote_manager_cli/: cli.py  database.py  logger_config.py  quote_manager.py
tests/: test_cli.py  test_database.py  test_quote_manager.py
