[tool.poetry]
name = "quote-manager-cli"
version = "0.1.0"
description = ""

license = "MIT"

authors = ["Prechy <preciousrobinsonokafor@gmail.com>"]

readme = "README.md"

# repository = ""


# Keywords 
keywords = ["Quote Manager", "CLI Tool"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
