[tool.poetry]
name = "quote-manager-cli"
version = "0.1.0"
description = ""

license = "MIT"

authors = ["Prechy <preciousrobinsonokafor@gmail.com>"]

readme = "README.md"

# repository = ""


# Keywords 
keywords = ["Quote Manager", "CLI Tool"]

[tool.poetry.dependencies]
python = "^3.10"
duckdb-engine = "^0.13.1"
sqlalchemy = "^2.0.32"
click = "^8.1.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quote = "quote_manager_cli.cli:cli"
